--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ argparse = "0.2.2"
 bincode = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tempfile = "3.1.0"
+config = "0.10.1"
+lazy_static = "^0.2.8"
+
 
 [build-dependencies]
 tonic-build  = "0.2.0"
