--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,9 @@ serde = { version = "1.0", features = ["derive"] }
 tempfile = "3.1.0"
 config = "0.10.1"
 lazy_static = "^0.2.8"
+dirs = "2.0"
+strum = "0.18.0"
+strum_macros = "0.18.0"
 
 
 [build-dependencies]
